manifests/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    pod-security.kubernetes.io/enforce: baseline
    gateway-access: "true"
