manifests/nextcloud/netpol-nextcloud.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: cloudflared
            io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kanidm
            io.kubernetes.pod.namespace: kanidm
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.nextcloud.com"
        - matchName: "github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.github.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
